--- a/views/500.ejs
+++ b/views/500.ejs
@@ -3,6 +3,7 @@
 
 <body>
     <%- include('includes/navigation.ejs') %>
-    <h1>Page Not Found!</h1>
+    <h1>Something went Wrong!!</h1>
+    <p>Sorry for Inconvenience</p>
 
 <%- include('includes/end.ejs') %>
